--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LocalServ": "Data Source=DESKTOP-ARNJVIV\\SQLEXPRESS;Initial Catalog=ClearChallenge;Integrated Security=False;User Id=MYPER;Password=MYPER ;MultipleActiveResultSets=True"
+  }
 }
